--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,23 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Barrio&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 html {
-  font-size: 62.5%; /* 16px * 62.5 = 10px = 1rem */
+  font-size: 16px; /* 16px * 62.5 = 10px = 1rem */
   box-sizing: border-box;
-  font-family: 'Inter', 'sans serif';
+  background-color: #e8eaee;
 }
 body {
-  font: 1.6rem Helvetica;
+  font: 1.6em ;
+  font-family: 'Anonymous Pro', monospace;
   height: 100vh;
   margin: 0;
 }
-button {
-  font-size: 1.6rem;
-}
-.full-width {
-  width: 100%;
-}
-#root {
-  height: 100%;
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Barrio', cursive;
 }
 
 h1{
@@ -44,154 +40,248 @@ p, ul, li, i{
   font-size: 1em;
 }
 
-
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
+button {
+  font-size: 1.6em;
 }
-
+.full-width {
+  width: 100%;
+}
+#root {
+  height: 100%;
+}
 
 .header {
-  background-color: green;
   color: #333333;
   display: flex;
-  padding: 0em 2em;
+  justify-content: center;
   align-items: center;
-  justify-content: space-between;
-  max-width: 100%;
+  padding-top: 1em;
+  width: 95%;
+  margin: 0 auto;
 }
 
-.burger-menu{
-  display: none;
-}
-
-.header a{
-  color: white;
-}
-
-.straightenThis{
+.flexTheHeader{
   display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  background-color: white;
 }
 
-.navForMobiles{
-  display: none;
-}
-
-.navLeftSide{
-  float: left;
-}
-
-.navRightSide{
-  display: flex;
-  justify-self: flex-end;
-  max-width: 100%;
-}
-
-.navRightSide li{
-  padding: 0em 1em;
+.fourHandsHeading{
   color: #333333;
+  margin: 0 auto;
 }
 
-
-
-.cart-icon{
-  display: none;
-}
-
-.cart-text{
+.fourHandsHeadingText{
+  color: #718279;
+  font-size: 3.5em;
+  margin: 0 auto;
   display: flex;
   flex-direction: row;
+}             
+
+
+.theActualNav{
+  background-color: white;
+  text-decoration: none;  
+  display: flex;
+  justify-content: space-evenly;
+  padding-bottom: 2em;
 }
 
-.main {
-  grid-area: main;
+.theActualNav a h2{
+  color: #4D453A;
 }
-.footer {
+
+
+@media only screen and (max-width: 768px) {
+  .theActualNav{
+    display: none;
+  }
+
+  .homepageFirstPiece{
+    display: flex;
+    flex-direction: column;
+  }
+
+}
+
+
+@media only screen and (min-width: 1200px){
+
+  .paraforalignment{
+    height: 60%;
+  }
+
+}
+
+
+.theActualNav h2{
+  color: #333333;
+}
+
+.theActualNav h2:hover{
+  color: white;
+  background-color: #4D453A;
+}
+
+
+.brand{
+  color: #333333;
+  margin: 0 auto;
+}
+
+#noMargin{
+  margin: 0 0;
+}
+
+
+.brand a {
+  color: #333333;
+  font-size: 2em;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.spacebetween{
+  margin: 0rem 1rem;
+}
+
+.navmenu{
+  color: black;
+  padding: 1rem;
+  align-self: flex-end;
+}
+
+.header-links a {
+  color: black;
+  text-decoration: none;
+  padding: 1em;
+}
+.header-links a:hover {
+  color: black;
+  background-color: white;
+}
+.main {
+  margin: auto 0;
+  width: 100%;
+}
+/* .footer {
   grid-area: footer;
-  background-color: #333333;
+  background-color: #203040;
   color: #ffffff;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
-  flex-direction: column;
-  text-align: center;
-}
-
-
+} */
 a {
   text-decoration: none;
-  color: #333333
 }
 a:hover {
   color: black;
 }
-
 /* Home Screen */
 .products {
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-wrap: wrap;
-}
-.products li {
-  list-style-type: none;
-  padding: 0;
-  flex: 0 1 34rem;
-  margin: 1rem;
-  height: 45rem;
-  border-bottom: 0.1rem #c0c0c0 solid;
-}
-.product {
-  display: flex;
-  flex-direction: column;
   justify-content: space-between;
-  border-radius: 6px;
-  overflow: hidden;
-  height: 100%;
-  border: .5px double black;
-  background-color: white;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  margin: 0 auto;
 }
 
-.product img{
-  overflow: hidden;
-  width: 100%;
-  height: 30rem;
+.productPlacer{
 }
 
-.pad{
-  padding-left: 1em;
-  padding-right: 1em
-}
+@media only screen and (max-width: 768px){
+  .productPlacer{
+    margin: auto 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0em 0em;
+  }
 
-.product-name {
-  color: white;
-  font-size: 2rem;
-  font-weight: bold;
-}
-
-.product-actual-name{
-  color: #333333;
+  .fourHandsHeadingText{
+    font-size: 2em;
+    margin: 0 auto;
+  }
   
 }
 
+@media only screen and (max-width: 768px){
+  .fourHandsHeadingText{
+    font-size: 1.3em;
+    margin: 0 auto;
+    flex-direction: row;
+  }
+}
+
+.orderButton{
+  cursor: pointer;
+  border: 1px solid black;
+  background-color: #F4F4F4;
+  color: black;
+  margin: 0 auto;
+  display: flex;
+  width: 40%;
+  justify-content: center;
+  align-content: center;
+}
+
+
+.menuTakeawaySection{
+  border: 2px solid black;
+  border-radius: 20px;
+  padding: 2em 2em;
+  margin: 0 auto;
+}
+
+
+.product {
+  padding: 2em 0em; 
+}
+
+.product li {
+  text-decoration: none;
+}
+
+.productDetail{
+  padding: 2em;
+}
+
+.product img{
+  width: 100%;
+}
+
+.curiousButton{
+  border: 1px solid black;
+  background-color: red;
+  color: black;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  margin: 0 auto;
+  padding: 1em;
+  border-radius: 12px;
+}
+
+.product-name {
+  font-size: 2em;
+  font-weight: bold;
+}
 .product-brand {
-  font-size: 1.2rem;
+  font-size: 1.2em;
   color: #808080;
 }
 .product-price {
-  font-size: 2rem;
+  font-size: 2em;
   font-weight: bold;
 }
 .product-image {
-  max-width: 34rem;
-  max-height: 34rem;
-  border-bottom: 1px solid black;
+  max-width: 34em;
+  max-height: 34em;
 }
 .product-rating {
-  margin-bottom: 1rem;
+  margin-bottom: 1em;
 }
 /* Reviews */
 ul.review {
@@ -199,40 +289,22 @@ ul.review {
   padding: 0;
 }
 .review li {
-  margin: 1rem;
-  margin-bottom: 2rem;
+  margin: 1em;
+  margin-bottom: 2em;
 }
 .review li > div {
-  margin: 0.5rem;
-}
-
-.buttonDivHomepageProduct{
-  display: flex;
-  width: 100%;
-  justify-content: space-evenly;
-  padding-bottom: 1em;
-}
-
-.fifty{
-  width: 40%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.whitetext{
-  color: white;
+  margin: 0.5em;
 }
 
 /* Rating */
 .rating span {
-  color: #ffb901;
-  font-size: 1.8rem;
-  margin: 0.1rem;
+  color: black;
+  font-size: 1.8em;
+  margin: 0.1em;
 }
 .rating span:last-child {
   color: #444444;
-  font-size: 1.4rem;
+  font-size: 1.4em;
 }
 a > .rating > span:last-child {
   color: #0000ff;
@@ -242,80 +314,94 @@ a > .rating > span:last-child {
 
 .brand button {
   font-size: 3rem;
-  padding: 0.5rem;
+  padding: 1rem;
   background: none;
   border: none;
-  color: #ffffff;
+  color: #333333;
   cursor: pointer;
 }
 .sidebar {
   position: fixed;
-  display: none;
   transition: all 0.5s;
   transform: translateX(-30rem);
-  width: 15rem;
-  background-color: #f0f0f0;
+  width: 30rem;
+  background-color: black;
+  padding: 2rem;
   height: 100%;
+  max-width: 70%;
 }
+
+.sidebar h3{
+  color: white;
+}
+
 .sidebar.open {
   transform: translateX(0);
-  display: flex;
-  flex-direction: column;
 }
 
 .sidebar-close-button {
   border-radius: 50%;
-  background-color: red;
+  border: 0.1rem #000000 solid;
+  width: 3rem;
+  height: 3rem;
+  padding: 0.5rem;
+  font-size: 2rem;
+  padding-top: 0;
   cursor: pointer;
   position: absolute;
   right: 0.5rem;
-  padding: .5em .75em;
+  top: 1.5rem;
 }
 
 /* Product Details */
-.details {
+
+.productScreenDiv{
   display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  padding: 1rem;
-}
-.details-image {
-  flex: 2 1 60rem;
-}
-.details-image img {
-  max-width: 60rem;
-  width: 100%;
-}
-.details-info {
-  border: 1px solid grey;
-  border-radius: 12px;
-  padding: 2em 2em;
-  overflow: hidden;
+  margin: 0 auto;
+  justify-content: center;
 }
 
-.product-front-and-center{
-  width: 50%;
-  margin: 0 auto;
+.details {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 1rem;
+}
+
+.details-image{
+  display: flex;
+  justify-content: center;
+}
+
+.details-image img {
+  width: 40%;
+  height: auto;
+  justify-items: center;
+}
+
+.details-info {
+  flex: 1 1 30rem;
+}
+
+.details-action {
+  flex: 1 1 30rem;
+  margin: 1rem auto;
+  max-width: 70%;
 }
 
 .details-info ul,
 .details-action ul {
   list-style-type: none;
-  padding: 1em 1em;
-  flex-direction: column;
+  padding: 0;
 }
 .details-info li,
 .details-action li {
-  margin: 1em 0em;
+  margin-bottom: 1rem;
 }
 .back-to-result {
-  padding: 1rem 1rem;
-  text-decoration: none;
-  color: #333333;
+  padding: 1rem;
 }
 .details-action {
-  width: 30%;
-  margin: 0 auto;
   border: 0.1rem #808080 solid;
   border-radius: 0.5rem;
   background-color: #f8f8f8;
@@ -335,44 +421,37 @@ a > .rating > span:last-child {
   border: 0.1rem #404040 solid;
 }
 .button.primary {
-  background-color: black;
-  color: white;
+  background-color: #f0c040;
 }
 .button.secondary {
   background-color: #f0f0f0;
-  color: black;
 }
 .text-center {
   text-align: center;
 }
-
-.account-already-text{
-  color: #808080;
-}
-
 /* Cart */
 
 .cart {
-  min-height: 40em;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   margin: 1rem;
   align-items: flex-start;
+  min-height: 50rem;
+  height: auto;
 }
 .cart-list {
-  flex: 3 1 60rem;
+  width: 80%;
+  margin: 0 auto;
 }
 .cart-action {
   flex: 1 1 20rem;
   background-color: #f0f0f0;
   border-radius: 0.5rem;
   padding: 1rem;
-  align-self: center;
-  justify-items: center;
+  width: 80%;
+  margin: 0 auto;
 }
 .cart-list-container {
-  display: flex;
-  flex-direction: column;
   padding: 0;
   list-style-type: none;
   padding: 1rem;
@@ -395,55 +474,39 @@ a > .rating > span:last-child {
   align-items: flex-end;
 }
 .cart-image {
-  flex: 1 1;
+  flex: 5 1;
 }
 .cart-name {
-  left: 1em;
-  flex: 6 1;
-  color: black;
-  flex-direction: row;
-}
-
-.column{
   display: flex;
   flex-direction: column;
-  width: 20%;
+  color: black;
+
 }
 
-.black-text{
-  color: #000000;
+.listItemCart{
+  display: flex;
 }
+
+.cart-product-name{
+  color: black;
+}
+
 .cart-price {
   flex: 1 1;
   font-size: 2.5rem;
   text-align: right;
 }
 
-.see-products{
-  text-decoration: none;
-  color: white;
-}
-
-.see-products-button{
-  background-color: green;
-  color: white;
-  display: flex;
-  justify-content: center;
-  border-radius: 24px;
-}
-
 /* forms */
 
 .form {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100%;
-  padding: 10rem;
 }
-
 .form-container {
+  background-color: white;
   display: flex;
   flex-direction: column;
   width: 32rem;
@@ -452,20 +515,16 @@ a > .rating > span:last-child {
   border-radius: 0.5rem;
   list-style-type: none;
 }
-
 .form-container li {
   display: flex;
   flex-direction: column;
   margin-bottom: 1rem;
   margin-top: 1rem;
 }
-
-
-
 input {
   padding: 1rem;
   border: 0.1rem #c0c0c0 solid;
-  border-radius: 0.5rem;
+  /* border-radius: 0.5rem; */
 }
 
 /* Products */
@@ -481,6 +540,7 @@ input {
 }
 
 .table {
+  background-color: white;
   width: 100%;
 }
 th {
@@ -540,7 +600,6 @@ tbody > tr:nth-child(odd) {
 .placeorder-action > ul {
   padding: 0;
   list-style-type: none;
-  flex-direction: column;
 }
 .placeorder-action > ul > li {
   display: flex;
@@ -576,13 +635,15 @@ tbody > tr:nth-child(odd) {
   position: relative;
 }
 .dropdown-content {
+  background-color: white;
+  color: black;
+  border: 3px solid black;
   position: absolute;
   display: none;
   right: 0;
   padding: 1rem;
   list-style-type: none;
   z-index: 1;
-  background-color: #203040;
   margin: 0;
   margin-top: 0.4rem;
 }
@@ -612,447 +673,108 @@ tbody > tr:nth-child(odd) {
 .categories {
   padding: 0;
   list-style-type: none;
+  background-color: black;
 }
 .categories a {
   display: flex;
   padding: 1rem;
+  color: white;
 }
 
 .categories a:hover {
   background-color: #c0c0c0;
 }
 
-
-/* By Eoin */
-
-.containerByEoin{
-  width: 90%;
-  margin: 4em auto;
-  border-radius: 12px;
-  overflow: hidden;
-  border: .5px solid black;
-}
-
-.firewoodSection{
-  height: 10em;
-  overflow: hidden;
-}
-
-.firewoodSection img {
-  width: 100%;
-  height: auto;
-}
-
-.smallHR{
-  width: 20%;
-}
-
-.supplytext{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-
-.homepageSection{
-  height: 30em;
-}
-
-.homepageSectionOne{
-  height: 10em;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-content: center;
-}
-
-.homepageSectionFirewood{
-  background-color: #686868;
-  color: white;
-  display: flex;
-  flex-direction: column;
-}
-
-.forPaddingSections{
-  padding: 2em 2em;
-  width: 80%;
-  margin: 0 auto;
-}
-
-.product-padding-section{
-  padding: 2em 0em;
-  width: 80%;
-  margin: 0 auto;
-}
-
-.flexThisEvenly{
-  display: flex;
-  align-items: center;
-}
-
-.flexThisSideways{
-  display: flex;
-  flex-direction: row;
-}
-
-.seeProductButton{
-  color: black;
-  padding: 0.25em 1em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.orderNowButton{
-  background-color: orange;
-  color: white;
-  border-radius: 24px;
-  padding: 0.25em .5em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.about-section{
-  margin: 0 auto;
-}
-
-.about-section img{
-  width: 100%;
-  height: auto;
-}
-
-.grey-border{
-  border: 2px solid grey;
-  border-radius: 12px;
-  overflow: hidden;
-  background-color: white;
-  color: black;
-  margin: 2em auto;
-}
-
-.inforgraphic{
+.cartLength{
+  border-radius: 50%;
   border: 1px solid black;
+  width: 25px;
+  color: black;
+  margin: .5rem auto;
+  height: 25px;
   display: flex;
-  color: white;
-}
-
-.inside-infographic{
-  width: 30%;
-  border-right: 1px solid black;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  justify-content: center;
-  align-content: center;
-}
-
-.inforgraphic-text{
-  display: flex;
-  flex-direction: column;
-  align-self: center;
-  margin: 0 5%;
-  max-width: 50%;
-  color: white;
-}
-
-.imagetocontain{
-  max-width: 100%;
-}
-
-.imagecontainer{
-  max-width: 100%;
-}
-
-.contact-section{
-  background-color: #0a2540;
-  color: white;
-}
-
-.greenOne{
-  background-color: #006600;
-}
-
-.greenTwo{
-  background-color: #009900;
-}
-
-.greenThree{
-  background-color: #00cc00;
-}
-
-.videoAndDescription{
-  display: flex;
-  flex-direction: row;
-  height: 35em;
-  width: 80%;
-  overflow: hidden;
-  margin: 2em auto;
-  border: 0.1px solid #e5e7eb;
-  border-radius: 12px;
-}
-
-.left33{
-  display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 60%;
 }
 
-.left33 .textToSquare{
-  height: auto;
-  padding: 2em 2em;
+.cartIconAndLength{
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-items: center;
 }
 
-.main-text-block{
+.trolley{
+}
+
+.burgerMenu{
+  display: none;
+}
+
+@media only screen and (max-width: 768px) {
+  .burgerMenu{
+    display: flex;
+  }
+
+}
+
+.barrioFont{
+  font-family: 'Barrio', cursive;
+}
+
+.dancingFont{
+  font-family: 'Dancing Script', cursive;
+  color: #4D453A;
   display: flex;
-  flex-direction: column;
-  margin: 0 auto;
-  align-items: flex-start;
+  align-self: center;
 }
 
-.firewoodInfographicDiv img{
-  border-radius: 24px;
-  border: 2px solid black;
-}
-
-.right66{
-  max-width: 40%;
-  overflow: hidden;
-  height: auto;
-}
-
-.right66 img{
-  max-height: 100%;
-}
-
-.orangeText{
-  color: orange;
-}
-
-.contactForm{
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
-  background-color: white;
-  color: black;
-  padding: 2em 2em;
-  border: 1px solid grey;
-  border-radius: 12px;
-}
-
-.our-firewood-section{
-  display: flex;
-  flex-direction: column;
-}
-
-.red-text{
-  color: red;
-  font-size: .8em;
-}
-
-/*  */
-/* Homepage */
-/*  */
-
-/* Products Section */
-.products-section{
-  background-color: #E0E0E0;
-}
-
-
-.contact-submit-button{
-  background-color: #0394fc;
-  color: black;
+.fiftyButtonWidth{
   width: 50%;
   margin: 0 auto;
+}
+
+.entireparentcontainer{
+  width: 100%;
+  margin: 0 auto;
+}
+
+.aboutContainer{
+  background-color: white;
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+}
+
+
+.formAndMoreNewsletter{
+  padding: 4em;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.homepageFirstPiece{
+  display: flex;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.abouttopImage{
   display: flex;
   justify-content: center;
-  align-content: center;
 }
 
-
-#greenButton{
-  background-color: green;
+.abouttopImage img {
+  width: 80%;
 }
 
-
-.background-for-eoin{
-  background-color: #000000;
-  font-family: 'Courier New', Courier, monospace;
-  cursor: pointer;
+.ProductsFromMenu{
+  border: 2px solid black;
+  margin: 0 auto;
+  width: 50%;
+  padding: 1em 1em;
 }
 
-
-
-
-
-
-/* Media Queries from here down */
-@media only screen and (max-width: 1000px) {
-  .flexThisEvenly{
-    flex-direction: column-reverse;
-    padding: 0em 0em;
-  }
-
-  .videoAndDescription{
-    border: none;
-    margin: 0 auto;
-    padding: 0em 0em;
-    width: 100%;
-    border-radius: 0px;
-    justify-self: start;
-    align-self: start;
-  }
-
-  .right66{
-    display: none;
-  }
-
-  
-
-  .details{
-    display: flex;
-    flex-direction: column;
-    padding: 0em 0em;
-  }
-
-  .details-info{
-    margin: 0 auto;
-    padding: 0em 0em;
-    width: 100%;
-  }
-
-  .product-front-and-center{
-    width: 85%;
-    margin: 2em auto;
-  }
-
-  .details-action{
-    width: 85%;
-    margin: 0 auto;
-    border: none;
-  }
-
-  .header{
-    padding: 0em 1em;
-    flex-direction: row-reverse;
-  }
-  .mobilefonth2{
-    font-size: 1.3em;
-  }
-
-  .burger-menu{
-    display: flex;
-    background-color: #333333;
-    color: white;
-  }
-
-
-  .navRightSide{
-    display: none;
-  }
-
-  .details-action ul {
-    width: 100%;
-  }
-
-  .details-action li{
-    width: 100%;
-  }
-
-  .checkout-steps{
-    max-width: 80%;
-  }
-
-  .placeorder-info{
-    margin: 0 auto;
-    padding: 0em 0em;
-  }
-
-  .placeorder-action{
-    margin: 0 auto;
-  }
-
-  .sidebar{
-    background-color: black;
-    color: white;
-    margin: 0 auto;
-    width: 60%;
-    padding: 1em 1em;
-  }
-
-  .categories{
-    display: flex;
-    flex-direction: column;
-  }
-
-  .inforgraphic{
-    width: 100%;
-  }
-
-  .inside-infographic{
-    width: 100%;
-  }
-
-  .inforgraphic-text{
-    border-top: 1px solid black;
-    max-width: 90%;
-    margin: 0 auto;
-  }
-
-  .greenOne{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-  }
-
-  .greenTwo{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-  }
-  
-  .greenThree{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-  }
-
-  .forPaddingSections{
-    padding: 2.5em 0em;
-    width: 95%;
-    margin: 0 auto;
-  }
-
-  .padText{
-    width: 80%;
-    margin: 0 auto;
-  }
-  
-
-  .product-padding-section{
-    width: 95%;
-  }
-
-  .cart-icon{
-    display: flex;
-    background-color: red;
-    padding: .5em .5em;
-    border-radius: 50%;
-  }
-
-  .supplytext{
-    height: auto;
-  }
-
-  #supplyID{
-    padding: 0em 0em;
-  }
-  
+.takeawayDetails{
+  display: flex;
+  justify-content: space-evenly;
 }
