Takeaway is solved.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -383,7 +383,7 @@ a > .rating > span:last-child {
   background-color: black;
   padding: 2rem;
   height: 100%;
-  max-width: 50%;
+  max-width: 60%;
 }
 
 .sidebar h3{
@@ -795,6 +795,7 @@ tbody > tr:nth-child(odd) {
   width: 90%;
   margin: 0 auto;
   display: flex;
+  flex-direction: column;
 }
 
 
