--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -797,6 +797,7 @@ tbody > tr:nth-child(odd) {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+  height: auto;
 }
 
 
@@ -875,8 +876,11 @@ img.small {
 }
 
 #products{
+  width: 90%;
   display: flex;
   flex-wrap: wrap;
+  margin: 0 auto;
+  justify-items: center;
 }
 
 .product-padding-section{
@@ -907,8 +911,6 @@ img.small {
   align-items: center;
   justify-content: center;
 }
-
-.order{}
 
 .centerThisUL{
   width: 90%;
